; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_like_support.c_string_to_bytea_const.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_like_support.c_string_to_bytea_const.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@VARHDRSZ = common dso_local global i64 0, align 8
@BYTEAOID = common dso_local global i32 0, align 4
@InvalidOid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i64)* @string_to_bytea_const to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @string_to_bytea_const(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i64, i64* @VARHDRSZ, align 8
  %8 = load i64, i64* %4, align 8
  %9 = add i64 %7, %8
  %10 = call i32* @palloc(i64 %9)
  store i32* %10, i32** %5, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = call i32 @VARDATA(i32* %11)
  %13 = load i8*, i8** %3, align 8
  %14 = load i64, i64* %4, align 8
  %15 = call i32 @memcpy(i32 %12, i8* %13, i64 %14)
  %16 = load i32*, i32** %5, align 8
  %17 = load i64, i64* @VARHDRSZ, align 8
  %18 = load i64, i64* %4, align 8
  %19 = add i64 %17, %18
  %20 = call i32 @SET_VARSIZE(i32* %16, i64 %19)
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @PointerGetDatum(i32* %21)
  store i32 %22, i32* %6, align 4
  %23 = load i32, i32* @BYTEAOID, align 4
  %24 = load i32, i32* @InvalidOid, align 4
  %25 = load i32, i32* %6, align 4
  %26 = call i32* @makeConst(i32 %23, i32 -1, i32 %24, i32 -1, i32 %25, i32 0, i32 0)
  ret i32* %26
}

declare dso_local i32* @palloc(i64) #1

declare dso_local i32 @memcpy(i32, i8*, i64) #1

declare dso_local i32 @VARDATA(i32*) #1

declare dso_local i32 @SET_VARSIZE(i32*, i64) #1

declare dso_local i32 @PointerGetDatum(i32*) #1

declare dso_local i32* @makeConst(i32, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
